# aws-admin

./: .gitignore  README.md  aws_common.py  aws_init.py  aws_instances  aws_instances.py  aws_monitor_instances  aws_monitor_instances.py  aws_push.sh  aws_ssh  aws_ssh.py  aws_start  aws_start.py  aws_start_ssh  aws_stop  aws_stop.py  checkinst2.py  config.yaml.templ  install_gpu_instance.py  instances.py  pyproject.toml  requirements.txt  setenv.sh.templ  setup.sh  start_instance.py  stop_instance.py  terminateinstances.py  terminateinstancesifnoconnections.sh
aws_admin/: aws_common.py  aws_init.py  aws_instances.py  aws_monitor_instances.py  aws_ssh.py  aws_start.py  aws_start_ssh.py  aws_stop.py  checkinst2.py  terminateinstances.py
aws_lib/: check_changes.py  email_lib.py
nimbix/: README.md  launch-standard.py  launch.py  shutdown.py  ssh.py  ssh.sh
win/: dontshutdown.cmd  maybe_shutdown.py
